# C_Plus_Plus

./: main.cpp
basic/: 2D_arrays.cpp  display_name.cpp  hello_world.cpp  multiply_float.cpp  perimeter_area.cpp  size_datatypes.cpp  sum_two_num.cpp  swap_two_num.cpp
control_flow/: calculator.cpp  even_or_odd.cpp  factorial.cpp  largest_among.cpp  leap_year.cpp  natural_num.cpp  reverse_num.cpp
core/: namespace.cpp
projects/: guessing_game.cpp  projects.md  simple_calculator.cpp
projects/ToDo_manager/: main.cpp  notes.md
projects/text_editor/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  main.cpp
test/: nameList.cpp  swap.cpp
